prevent "- or -" from wrapping relates to #441

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -999,6 +999,8 @@ padding-right: 0;
     float: left;
     width: 8%;
     height: 100px;
+    padding: 0;
+    white-space: onwrap;
   }
 }
 
